# Qmusic

./: .gitignore  README.md  build.gradle  settings.gradle
playlib/: CMakeLists.txt  build.gradle
playlib/src/androidTest/java/com/example/playlib/: ExampleInstrumentedTest.java
playlib/src/androidTest/java/com/zizi/playlib/: ExampleInstrumentedTest.java
playlib/src/main/: AndroidManifest.xml
playlib/src/main/cpp/: AACEncoderNative.cpp  AndroidLog.h  AudioCoder.cpp  AudioCoder.h  AudioPlayer.cpp  AudioPlayer.h  AudioProccessor.cpp  AudioProccessor.h  ErrUtil.cpp  ErrUtil.h  FileUtilNative.cpp  NotifyApplication.cpp  NotifyApplication.h  PacketQueue.cpp  PacketQueue.h  PlayNative.cpp  PlaySession.cpp  PlaySession.h
playlib/src/main/cpp/FDKaac/: CMakeLists.txt  Makefile.in  aac-enc.c  config.status  fdk-aac.pc
playlib/src/main/cpp/FDKaac/libAACdec/src/: aac_ram.cpp  aac_ram.h  aac_rom.h  aacdec_drc_types.h  aacdec_hcr.h  aacdec_hcrs.cpp  aacdec_hcrs.h  aacdec_pns.cpp  aacdecoder_lib.cpp  block.cpp  block.h  channelinfo.cpp  conceal.cpp  conceal.h  ldfiltbank.h  pulsedata.cpp  rvlc.h  rvlcbit.h
playlib/src/main/cpp/FDKaac/libAACdec/src/.deps/: aacdec_hcr_bit.Plo  aacdec_hcrs.Plo  aacdec_tns.Plo  aacdecoder.Plo  block.Plo  channelinfo.Plo  conceal.Plo  ldfiltbank.Plo  pulsedata.Plo  rvlcconceal.Plo  stereo.Plo
playlib/src/main/cpp/FDKaac/libAACdec/src/arm/: block_arm.cpp
playlib/src/main/cpp/FDKaac/libAACenc/include/: aacenc_lib.h
playlib/src/main/cpp/FDKaac/libAACenc/src/: aacEnc_rom.cpp  aacEnc_rom.h  aacenc_pns.cpp  aacenc_pns.h  aacenc_tns.cpp  band_nrg.h  bandwidth.cpp  bandwidth.h  bit_cnt.cpp  bitenc.cpp  bitenc.h  block_switch.cpp  block_switch.h  grp_data.cpp  grp_data.h  interface.h  line_pe.h  metadata_main.cpp  noisedet.cpp  noisedet.h  pns_func.h  pnsparam.h  pre_echo_control.cpp  pre_echo_control.h  psy_configuration.cpp  psy_data.h  psy_main.cpp  psy_main.h  qc_data.h  qc_main.cpp  qc_main.h  quantize.h  sf_estim.h  spreading.h  tonality.cpp  tonality.h
playlib/src/main/cpp/FDKaac/libAACenc/src/.deps/: aacEnc_rom.Plo  aacenc_pns.Plo  aacenc_tns.Plo  adj_thr.Plo  band_nrg.Plo  bitenc.Plo  block_switch.Plo  channel_map.Plo  chaosmeasure.Plo  line_pe.Plo  psy_configuration.Plo  psy_main.Plo
playlib/src/main/cpp/FDKaac/libFDK/include/: FDK_bitbuffer.h  FDK_crc.h  FDK_tools_rom.h  abs.h  common_fix.h  dct.h  fft.h  fft_rad2.h  fixmadd.h  fixmul.h  qmf.h
playlib/src/main/cpp/FDKaac/libFDK/include/mips/: scramble.h
playlib/src/main/cpp/FDKaac/libFDK/src/: FDK_core.cpp  FDK_tools_rom.cpp  FDK_trigFcts.cpp  dct.cpp
playlib/src/main/cpp/FDKaac/libFDK/src/.deps/: FDK_core.Plo  dct.Plo  fft_rad2.Plo  qmf.Plo
playlib/src/main/cpp/FDKaac/libFDK/src/arm/: dct_arm.cpp  qmf_arm.cpp
playlib/src/main/cpp/FDKaac/libFDK/src/mips/: mips_fft_twiddles.cpp
playlib/src/main/cpp/FDKaac/libMpegTPDec/src/: mpegFileFormat.h  tpdec_adif.cpp  tpdec_adif.h  tpdec_adts.cpp  tpdec_adts.h  tpdec_latm.h  tpdec_lib.cpp
playlib/src/main/cpp/FDKaac/libMpegTPDec/src/.deps/: tpdec_adif.Plo  tpdec_asc.Plo  tpdec_latm.Plo
playlib/src/main/cpp/FDKaac/libMpegTPEnc/src/: tpenc_adif.cpp  tpenc_asc.h
playlib/src/main/cpp/FDKaac/libPCMutils/include/: limiter.h
playlib/src/main/cpp/FDKaac/libSBRdec/include/: sbrdecoder.h
playlib/src/main/cpp/FDKaac/libSBRdec/src/: env_dec.cpp  env_dec.h  huff_dec.cpp  lpp_tran.cpp  lpp_tran.h  psbitdec.cpp  psdec.cpp  psdec.h  psdec_hybrid.cpp  sbr_crc.h  sbr_ram.cpp  sbr_ram.h  sbr_rom.cpp  sbr_rom.h  sbrdec_drc.cpp
playlib/src/main/cpp/FDKaac/libSBRdec/src/.deps/: env_calc.Plo  env_dec.Plo  lpp_tran.Plo  psbitdec.Plo  psdec.Plo  sbr_dec.Plo  sbrdec_drc.Plo  sbrdecoder.Plo
playlib/src/main/cpp/FDKaac/libSBRenc/src/: bit_sbr.h  cmondata.h  code_env.cpp  code_env.h  env_bit.h  env_est.cpp  env_est.h  fram_gen.h  invf_est.cpp  invf_est.h  mh_det.h  ps_bitenc.cpp  ps_const.h  ps_main.cpp  ps_main.h  sbr_def.h  sbr_encoder.cpp  sbr_misc.h  sbr_ram.cpp  sbrenc_freq_sca.cpp  ton_corr.h  tran_det.h
playlib/src/main/cpp/FDKaac/libSBRenc/src/.deps/: bit_sbr.Plo  code_env.Plo  env_bit.Plo  env_est.Plo  fram_gen.Plo  ps_encode.Plo  resampler.Plo  sbr_encoder.Plo  sbr_ram.Plo  sbrenc_freq_sca.Plo  tran_det.Plo
playlib/src/main/cpp/FDKaac/libSYS/include/: FDK_audio.h  conv_string.h
playlib/src/main/cpp/FDKaac/libSYS/src/.deps/: conv_string.Plo  genericStds.Plo  wav_file.Plo
playlib/src/main/cpp/FDKaac/libSYS/src/mips/: genericStds_mips.cpp
playlib/src/main/cpp/encoder/FDKaac/: AACEncoder.cpp  AACEncoder.h  CMakeLists.txt  EncoderNode.cpp  EncoderNode.h  Makefile  configure  libtool  wavreader.c  wavreader.h
playlib/src/main/cpp/encoder/FDKaac/libAACdec/include/: aacdecoder_lib.h
playlib/src/main/cpp/encoder/FDKaac/libAACdec/src/: aac_rom.cpp  aacdec_drc.cpp  aacdec_drc.h  aacdec_hcr.cpp  aacdec_hcr_bit.cpp  aacdec_hcr_types.h  aacdec_pns.h  aacdec_tns.cpp  aacdec_tns.h  aacdecoder.cpp  aacdecoder.h  channel.cpp  channel.h  channelinfo.h  conceal_types.h  ldfiltbank.cpp  pulsedata.h  rvlc.cpp  rvlc_info.h  rvlcbit.cpp  rvlcconceal.cpp  rvlcconceal.h  stereo.cpp
playlib/src/main/cpp/encoder/FDKaac/libAACenc/src/: aacEnc_ram.cpp  aacenc.cpp  aacenc.h  aacenc_lib.cpp  aacenc_tns.h  adj_thr.cpp  adj_thr.h  adj_thr_data.h  band_nrg.cpp  bit_cnt.h  channel_map.cpp  chaosmeasure.cpp  chaosmeasure.h  dyn_bits.cpp  dyn_bits.h  intensity.cpp  intensity.h  line_pe.cpp  metadata_compressor.cpp  metadata_compressor.h  metadata_main.h  ms_stereo.cpp  ms_stereo.h  psy_configuration.h  psy_const.h  quantize.cpp  sf_estim.cpp  spreading.cpp  tns_func.h  transform.cpp  transform.h
playlib/src/main/cpp/encoder/FDKaac/libFDK/include/: clz.h  (+9 more)
playlib/src/main/cpp/soundtouch/: CMakeLists.txt
playlib/src/main/cpp/soundtouch/include/: STTypes.h
playlib/src/main/java/com/example/playlib/: PlayJniProxy.java
playlib/src/main/java/com/zizi/playlib/: CycleBuffer.java  PlayJniProxy.java
playlib/src/main/res/values/: strings.xml
playlib/src/test/java/com/example/playlib/: ExampleUnitTest.java
playlib/src/test/java/com/zizi/playlib/: ExampleUnitTest.java
(+201 files in other folders)
